tests/should_fail/sum_type/throwing_copy_ctor.h
#include <stdexcept>

struct ThrowingCopyCtor
{
	ThrowingCopyCtor() = default;
	ThrowingCopyCtor(const ThrowingCopyCtor&)
	{
		throw std::exception();
	}

	ThrowingCopyCtor(ThrowingCopyCtor&&) = default;
	~ThrowingCopyCtor() = default;
};